<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityA">

    <TextView
        android:id="@+id/alctxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_alc_4_0"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="casual"
        android:textColor="#0A0A0A" />

    <!--about button-->
    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_below="@+id/alctxtview"
        android:padding="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/about_alc"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#0A0A0A"
        android:fontFamily="casual"
        android:background="@drawable/relative_layout_background" />

    <!--profile button-->
    <Button
        android:id="@+id/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutBtn"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/my_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#0A0A0A"
        android:fontFamily="casual"
        android:background="@drawable/relative_layout_background" />

</RelativeLayout>